Fix header/footer layout issues for smaller viewport sizes

--- a/app/assets/stylesheets/_global.css.scss
+++ b/app/assets/stylesheets/_global.css.scss
@@ -69,11 +69,8 @@ a:hover {
 	font-family: "Helvetica","Arial",sans-serif;
 }
 h1 {
-	width: 99.99999998999999%;*width:99.94680850063828%;
 	display: block;
 	float: left;
-	margin-left: 2.127659574%;
-	margin-left: 0;
 	font-family: "news-gothic-std","Helvetica","Arial",sans-serif;
 	font-weight: 700;
 	font-size: 1.5em;
