--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -17,6 +17,7 @@
     .nav {
       border-bottom: 1px solid #dddddd;
       border-top: 1px solid #dddddd;
+      clear: left;
       margin-top: 6px;
       padding-bottom: 3px;
       > li {
